--- a/main.ipynb
+++ b/main.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 14,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-06-03T17:06:51.479722Z",
-     "start_time": "2024-06-03T17:06:51.476510Z"
+     "end_time": "2024-06-04T14:24:21.429316Z",
+     "start_time": "2024-06-04T14:24:21.426058Z"
     }
    },
    "outputs": [],
@@ -27,8 +27,128 @@
     "from torchvision import transforms\n",
     "import torchsummary\n",
     "import torch.optim as optim\n",
-    "import sys"
+    "import scripts.models as models"
    ]
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "model = models.SqueezeNet()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-06-04T14:24:21.972371Z",
+     "start_time": "2024-06-04T14:24:21.961718Z"
+    }
+   },
+   "id": "8aec841b882f4ea5",
+   "execution_count": 15
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==========================================================================================\n",
+      "Layer (type:depth-idx)                   Output Shape              Param #\n",
+      "==========================================================================================\n",
+      "├─Sequential: 1-1                        [-1, 512, 15, 15]         --\n",
+      "|    └─Conv2d: 2-1                       [-1, 64, 127, 127]        1,792\n",
+      "|    └─ReLU: 2-2                         [-1, 64, 127, 127]        --\n",
+      "|    └─MaxPool2d: 2-3                    [-1, 64, 63, 63]          --\n",
+      "|    └─Fire: 2-4                         [-1, 128, 63, 63]         --\n",
+      "|    |    └─Conv2d: 3-1                  [-1, 16, 63, 63]          1,040\n",
+      "|    |    └─ReLU: 3-2                    [-1, 16, 63, 63]          --\n",
+      "|    |    └─Conv2d: 3-3                  [-1, 64, 63, 63]          1,088\n",
+      "|    |    └─ReLU: 3-4                    [-1, 64, 63, 63]          --\n",
+      "|    |    └─Conv2d: 3-5                  [-1, 64, 63, 63]          9,280\n",
+      "|    |    └─ReLU: 3-6                    [-1, 64, 63, 63]          --\n",
+      "|    └─Fire: 2-5                         [-1, 128, 63, 63]         --\n",
+      "|    |    └─Conv2d: 3-7                  [-1, 16, 63, 63]          2,064\n",
+      "|    |    └─ReLU: 3-8                    [-1, 16, 63, 63]          --\n",
+      "|    |    └─Conv2d: 3-9                  [-1, 64, 63, 63]          1,088\n",
+      "|    |    └─ReLU: 3-10                   [-1, 64, 63, 63]          --\n",
+      "|    |    └─Conv2d: 3-11                 [-1, 64, 63, 63]          9,280\n",
+      "|    |    └─ReLU: 3-12                   [-1, 64, 63, 63]          --\n",
+      "|    └─MaxPool2d: 2-6                    [-1, 128, 31, 31]         --\n",
+      "|    └─Fire: 2-7                         [-1, 256, 31, 31]         --\n",
+      "|    |    └─Conv2d: 3-13                 [-1, 32, 31, 31]          4,128\n",
+      "|    |    └─ReLU: 3-14                   [-1, 32, 31, 31]          --\n",
+      "|    |    └─Conv2d: 3-15                 [-1, 128, 31, 31]         4,224\n",
+      "|    |    └─ReLU: 3-16                   [-1, 128, 31, 31]         --\n",
+      "|    |    └─Conv2d: 3-17                 [-1, 128, 31, 31]         36,992\n",
+      "|    |    └─ReLU: 3-18                   [-1, 128, 31, 31]         --\n",
+      "|    └─Fire: 2-8                         [-1, 256, 31, 31]         --\n",
+      "|    |    └─Conv2d: 3-19                 [-1, 32, 31, 31]          8,224\n",
+      "|    |    └─ReLU: 3-20                   [-1, 32, 31, 31]          --\n",
+      "|    |    └─Conv2d: 3-21                 [-1, 128, 31, 31]         4,224\n",
+      "|    |    └─ReLU: 3-22                   [-1, 128, 31, 31]         --\n",
+      "|    |    └─Conv2d: 3-23                 [-1, 128, 31, 31]         36,992\n",
+      "|    |    └─ReLU: 3-24                   [-1, 128, 31, 31]         --\n",
+      "|    └─MaxPool2d: 2-9                    [-1, 256, 15, 15]         --\n",
+      "|    └─Fire: 2-10                        [-1, 384, 15, 15]         --\n",
+      "|    |    └─Conv2d: 3-25                 [-1, 48, 15, 15]          12,336\n",
+      "|    |    └─ReLU: 3-26                   [-1, 48, 15, 15]          --\n",
+      "|    |    └─Conv2d: 3-27                 [-1, 192, 15, 15]         9,408\n",
+      "|    |    └─ReLU: 3-28                   [-1, 192, 15, 15]         --\n",
+      "|    |    └─Conv2d: 3-29                 [-1, 192, 15, 15]         83,136\n",
+      "|    |    └─ReLU: 3-30                   [-1, 192, 15, 15]         --\n",
+      "|    └─Fire: 2-11                        [-1, 384, 15, 15]         --\n",
+      "|    |    └─Conv2d: 3-31                 [-1, 48, 15, 15]          18,480\n",
+      "|    |    └─ReLU: 3-32                   [-1, 48, 15, 15]          --\n",
+      "|    |    └─Conv2d: 3-33                 [-1, 192, 15, 15]         9,408\n",
+      "|    |    └─ReLU: 3-34                   [-1, 192, 15, 15]         --\n",
+      "|    |    └─Conv2d: 3-35                 [-1, 192, 15, 15]         83,136\n",
+      "|    |    └─ReLU: 3-36                   [-1, 192, 15, 15]         --\n",
+      "|    └─Fire: 2-12                        [-1, 512, 15, 15]         --\n",
+      "|    |    └─Conv2d: 3-37                 [-1, 64, 15, 15]          24,640\n",
+      "|    |    └─ReLU: 3-38                   [-1, 64, 15, 15]          --\n",
+      "|    |    └─Conv2d: 3-39                 [-1, 256, 15, 15]         16,640\n",
+      "|    |    └─ReLU: 3-40                   [-1, 256, 15, 15]         --\n",
+      "|    |    └─Conv2d: 3-41                 [-1, 256, 15, 15]         147,712\n",
+      "|    |    └─ReLU: 3-42                   [-1, 256, 15, 15]         --\n",
+      "|    └─Fire: 2-13                        [-1, 512, 15, 15]         --\n",
+      "|    |    └─Conv2d: 3-43                 [-1, 64, 15, 15]          32,832\n",
+      "|    |    └─ReLU: 3-44                   [-1, 64, 15, 15]          --\n",
+      "|    |    └─Conv2d: 3-45                 [-1, 256, 15, 15]         16,640\n",
+      "|    |    └─ReLU: 3-46                   [-1, 256, 15, 15]         --\n",
+      "|    |    └─Conv2d: 3-47                 [-1, 256, 15, 15]         147,712\n",
+      "|    |    └─ReLU: 3-48                   [-1, 256, 15, 15]         --\n",
+      "├─Sequential: 1-2                        [-1, 251, 1, 1]           --\n",
+      "|    └─Dropout: 2-14                     [-1, 512, 15, 15]         --\n",
+      "|    └─Conv2d: 2-15                      [-1, 251, 15, 15]         128,763\n",
+      "|    └─ReLU: 2-16                        [-1, 251, 15, 15]         --\n",
+      "|    └─AdaptiveAvgPool2d: 2-17           [-1, 251, 1, 1]           --\n",
+      "==========================================================================================\n",
+      "Total params: 851,259\n",
+      "Trainable params: 851,259\n",
+      "Non-trainable params: 0\n",
+      "Total mult-adds (M): 377.38\n",
+      "==========================================================================================\n",
+      "Input size (MB): 0.75\n",
+      "Forward/backward pass size (MB): 24.71\n",
+      "Params size (MB): 3.25\n",
+      "Estimated Total Size (MB): 28.71\n",
+      "==========================================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "torchsummary.summary(model, (3, 256, 256));"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-06-04T14:34:04.612770Z",
+     "start_time": "2024-06-04T14:34:04.593346Z"
+    }
+   },
+   "id": "cd403b9a5a3434e0",
+   "execution_count": 19
   },
   {
    "cell_type": "code",
