--- a/modeltests.ipynb
+++ b/modeltests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "<module 'models2' from '/home/ronin/Dev/notebooks/machinelearningformodeling/supervised/project/scripts/models2.py'>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,23 +33,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = models2.ColorizationSqueezeNet()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[35], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m torchsummary\u001b[38;5;241m.\u001b[39msummary(\u001b[43mmodel\u001b[49m, (\u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m224\u001b[39m, \u001b[38;5;241m224\u001b[39m));\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==========================================================================================\n",
+      "Layer (type:depth-idx)                   Output Shape              Param #\n",
+      "==========================================================================================\n",
+      "├─Encoder_greyscale: 1-1                 [-1, 512, 13, 13]         --\n",
+      "|    └─Sequential: 2-1                   [-1, 512, 13, 13]         --\n",
+      "|    |    └─Conv2d: 3-1                  [-1, 64, 111, 111]        640\n",
+      "|    |    └─ReLU: 3-2                    [-1, 64, 111, 111]        --\n",
+      "|    |    └─MaxPool2d: 3-3               [-1, 64, 55, 55]          --\n",
+      "|    |    └─Fire: 3-4                    [-1, 128, 55, 55]         11,408\n",
+      "|    |    └─Fire: 3-5                    [-1, 128, 55, 55]         12,432\n",
+      "|    |    └─MaxPool2d: 3-6               [-1, 128, 27, 27]         --\n",
+      "|    |    └─Fire: 3-7                    [-1, 256, 27, 27]         45,344\n",
+      "|    |    └─Fire: 3-8                    [-1, 256, 27, 27]         49,440\n",
+      "|    |    └─MaxPool2d: 3-9               [-1, 256, 13, 13]         --\n",
+      "|    |    └─Fire: 3-10                   [-1, 384, 13, 13]         104,880\n",
+      "|    |    └─Fire: 3-11                   [-1, 384, 13, 13]         111,024\n",
+      "|    |    └─Fire: 3-12                   [-1, 512, 13, 13]         188,992\n",
+      "|    |    └─Fire: 3-13                   [-1, 512, 13, 13]         197,184\n",
+      "├─Decoder: 1-2                           [-1, 3, 208, 208]         --\n",
+      "|    └─Sequential: 2-2                   [-1, 3, 208, 208]         --\n",
+      "|    |    └─Conv2d: 3-14                 [-1, 256, 13, 13]         131,328\n",
+      "|    |    └─ReLU: 3-15                   [-1, 256, 13, 13]         --\n",
+      "|    |    └─Upsample: 3-16               [-1, 256, 26, 26]         --\n",
+      "|    |    └─FireDecoder: 3-17            [-1, 128, 26, 26]         90,304\n",
+      "|    |    └─Upsample: 3-18               [-1, 128, 52, 52]         --\n",
+      "|    |    └─FireDecoder: 3-19            [-1, 64, 52, 52]          22,624\n",
+      "|    |    └─Upsample: 3-20               [-1, 64, 104, 104]        --\n",
+      "|    |    └─FireDecoder: 3-21            [-1, 32, 104, 104]        5,680\n",
+      "|    |    └─Upsample: 3-22               [-1, 32, 208, 208]        --\n",
+      "|    |    └─FireDecoder: 3-23            [-1, 16, 208, 208]        1,432\n",
+      "|    |    └─Conv2d: 3-24                 [-1, 3, 208, 208]         435\n",
+      "|    |    └─Tanh: 3-25                   [-1, 3, 208, 208]         --\n",
+      "==========================================================================================\n",
+      "Total params: 973,147\n",
+      "Trainable params: 973,147\n",
+      "Non-trainable params: 0\n",
+      "Total mult-adds (M): 535.71\n",
+      "==========================================================================================\n",
+      "Input size (MB): 0.19\n",
+      "Forward/backward pass size (MB): 34.64\n",
+      "Params size (MB): 3.71\n",
+      "Estimated Total Size (MB): 38.54\n",
+      "==========================================================================================\n"
      ]
     }
    ],
    "source": [
-    "torchsummary.summary(model, (3, 224, 224));"
+    "torchsummary.summary(model, (1, 224, 224));"
    ]
   },
   {
