documentation done, jigsaw

--- a/scripts/modelsbuild.ipynb
+++ b/scripts/modelsbuild.ipynb
@@ -13,10 +13,17 @@
     "\n",
     "\n",
     "class FireStorm(nn.Module):\n",
-    "    # This model is based on Fire module from SqueezeNet with the addition of BatchNorm \n",
-    "    # and the change of ReLU to LeakyReLU\n",
+    "    \"\"\" Firestorm module, a modified version of the Fire module from SqueezeNet\n",
+    "    This model is based on Fire module from SqueezeNet with the addition of BatchNorm \n",
+    "    and the change of ReLU to LeakyReLU\n",
     "\n",
-    "    # autoencoder\n",
+    "    Args:\n",
+    "        nn (_type_): Inherited from the nn module\n",
+    "\n",
+    "    Returns:\n",
+    "        self: Return the class instance, can be used to call the class methods\n",
+    "    \"\"\"\n",
+    "\n",
     "    def __init__(\n",
     "        self,\n",
     "        inplanes: int,\n",
@@ -25,6 +32,16 @@
     "        expand3x3_planes: int,\n",
     "        \n",
     "    ) -> None:\n",
+    "        \"\"\"initialization of the FireStorm module,\n",
+    "        changing relatively 1x1 and 3x3 will will change the importance that the output will attribute to the two filters\n",
+    "\n",
+    "        Args:\n",
+    "            inplanes (int): number of channels in the input tensor\n",
+    "            squeeze_planes (int): number of channels in the squeeze layer, is the lowest number of channels in the module,\n",
+    "            lowering this number will reduce the number of parameters in the model, but can reduce performance\n",
+    "            expand1x1_planes (int): number of channels in the 1x1 convolutional layer\n",
+    "            expand3x3_planes (int): number of channels in the 3x3 convolutional layer\n",
+    "        \"\"\"\n",
     "        super().__init__()\n",
     "        self.inplanes = inplanes\n",
     "\n",
@@ -55,12 +72,13 @@
     "\n",
     "\n",
     "class StormColorModel(nn.Module):\n",
-    "    # This net is a custom version of SqueezeNet: we replaced the Fire module with our custom FireStorm module,\n",
-    "    # modified the final convolutional layer into a fully connected layer\n",
-    "    # we used leaky ReLU instead of ReLU\n",
-    "    # we added BatchNorm after each convolutional layer\n",
-    "    # we modified the number of fire modules and the number of filters in each fire module\n",
-    "\n",
+    "    \"\"\"\n",
+    "    This net is a custom version of SqueezeNet: we replaced the Fire module with our custom FireStorm module,\n",
+    "    modified the final convolutional layer into a fully connected layer\n",
+    "    we used leaky ReLU instead of ReLU\n",
+    "    we added BatchNorm after each convolutional layer\n",
+    "    we modified the number of fire modules and the number of filters in each fire module\n",
+    "    \"\"\"\n",
     "    def __init__(self, num_classes: int = 251, dropout: float = 0.5) -> None:\n",
     "        super().__init__()\n",
     "        self.num_classes = num_classes\n",
@@ -88,8 +106,9 @@
     "        )\n",
     "\n",
     "class StormModel2(nn.Module):\n",
-    "    # version with more parameters\n",
-    "\n",
+    "    \"\"\"\n",
+    "    See Stormodel doc, version with more parameters\n",
+    "    \"\"\"\n",
     "    def __init__(self, num_classes: int = 251, dropout: float = 0.5) -> None:\n",
     "        super().__init__()\n",
     "        self.num_classes = num_classes\n",
